# esp_adc2_batt_monitor_poc

./: CMakeLists.txt
main/: CMakeLists.txt  README_ARCHITECTURE.md  adc_handler.c  http_handlers.c  oneshot_read_main.c  sensor_config.h  sht41_sensor.c
